# magic.collection-registry.backend

./: .env.test  .gitignore  Cargo.toml  README.md  docker-compose.yml
.clevercloud/: pre-build.sh
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230104181211_first_tables.sql  20230125170258_add_preview_image_to_cards.sql
migrations/2022-11-10-181505_first_tables/: down.sql  up.sql
migrations/2022-11-16-173806_sets_table/: down.sql  up.sql
migrations/2022-12-01-131145_cards_table/: up.sql
src/: app.rs  authentication.rs  container.rs  lib.rs  main.rs  monitoring.rs  schema.rs
src/configuration/: loader.rs  mod.rs  settings.rs
src/domain/: authentication.rs  card.rs  mod.rs  set.rs  token.rs  user.rs
src/domain/model/: card.rs  mod.rs  set.rs  token.rs  user.rs  user_email.rs
src/dto/: card.rs  mod.rs  set.rs  user.rs
src/errors/: domain.rs  jwt.rs  mod.rs
src/errors/api/: card_list.rs  forgotten_password.rs  login.rs  mod.rs  reset_password.rs
src/provider/: card.rs  mod.rs  set.rs  token.rs  user.rs
src/provider/database/: card.rs  mod.rs  set.rs  token.rs  user.rs
src/provider/email/: mailjet.rs  mod.rs
src/provider/memory/: mod.rs  token.rs  user.rs
src/provider/scryfall/: api.rs  bulk_data.rs  card.rs  mod.rs  set.rs
src/routes/: authentication.rs  cards.rs  mod.rs  sets.rs
src/routes/responses/: authentication.rs  cards.rs  mod.rs  sets.rs
src/templates/mail/: reset_password.html
tests/api/: authentication.rs  cards.rs  helpers.rs  main.rs  sets.rs
tests/api/fixtures/: cards.sql  sets.sql  tokens.sql  users.sql
tests/api/helpers/: app.rs  database.rs  mod.rs  response.rs
tests/api/helpers/fixtures/: card.rs  mod.rs  set.rs  token.rs  user.rs
