[package]
name = "magic-collection-registry-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "magic-collection-registry-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jsonwebtoken = "8"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "json"] }
tracing-actix-web = "0.6"

[dev-dependencies]
serde_json = "1"