[package]
name = "magic-collection-registry-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "magic-collection-registry-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
config = "0.13"
jsonwebtoken = "8"
once_cell = "1.16"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "json"] }
tracing-actix-web = "0.6"
validator = "0.16"

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
wiremock = "0.5"