[package]
name = "magic-collection-registry-backend"
version = "0.1.0"
edition = "2021"
default-run = "web"

[lib]
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }

# The revision here is a quickfix to let me go forward, without waiting for the next release of dotenvy
# TODO use the next released version (after 0.15)
dotenvy = { git = "https://github.com/allan2/dotenvy", rev = "d1f8a15" }
jsonwebtoken = "8"
lazy_static = "1.4"
once_cell = "1.16"
r2d2 = "0.8"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.24"
strum_macros = "0.24"
tera = "1"
thiserror = "1"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "json"] }
tracing-actix-web = "0.6"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

[dev-dependencies]
claims = "0.7"
diesel_migrations = "2.0.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
